[gd_scene load_steps=6 format=3 uid="uid://d2sasf8vv0m84"]

[ext_resource type="Script" path="res://Scripts/Door/door.gd" id="1_akuol"]
[ext_resource type="Texture2D" uid="uid://7mirmi0q4ysm" path="res://Assets/Sprites/Door/door.png" id="1_tokx2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_myohv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o6dso"]
size = Vector2(64, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_x61xq"]
radius = 440.65

[node name="Door" type="Node2D"]
script = ExtResource("1_akuol")

[node name="PinJoint2D" type="PinJoint2D" parent="."]
position = Vector2(5.915, 0)
node_a = NodePath("../Anchor")
node_b = NodePath("../Door")

[node name="Anchor" type="StaticBody2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Anchor"]
visible = false
shape = SubResource("CircleShape2D_myohv")

[node name="Door" type="RigidBody2D" parent="."]
collision_layer = 16
collision_mask = 3
mass = 100.0
inertia = 100.0
gravity_scale = 0.0
max_contacts_reported = 1
contact_monitor = true
sleeping = true

[node name="DoorSprite" type="Sprite2D" parent="Door"]
scale = Vector2(4, 4)
texture = ExtResource("1_tokx2")
offset = Vector2(8, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door"]
visible = false
position = Vector2(32, 0)
shape = SubResource("RectangleShape2D_o6dso")

[node name="SoundBox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="SoundBox"]
visible = false
shape = SubResource("CircleShape2D_x61xq")

[node name="SoundDuration" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="Door" to="." method="emit_sound"]
[connection signal="body_entered" from="SoundBox" to="." method="_on_sound_box_body_entered"]
[connection signal="body_exited" from="SoundBox" to="." method="_on_sound_box_body_exited"]
[connection signal="timeout" from="SoundDuration" to="." method="_on_sound_duration_timeout"]
